k8s-stage/02-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: news-demo-stage
  namespace: news-demo-stage
  labels:
    app: news-demo-stage
spec:
  selector:
    matchLabels:
      app: news-demo-stage
  replicas: 1
  template:
    metadata:
      labels:
        app: news-demo-stage
    spec:
      containers:
        - name: news-demo-stage
          image: quay.io/sm43/news-demo-dev:1649482033
          ports:
            - containerPort: 3000
