k8s-stage/03-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: news-demo-stage
  namespace: news-demo-stage
  labels:
    app: news-demo-stage
spec:
  selector:
    app: news-demo-stage
  ports:
    - port: 3000
      targetPort: 3000
  type: NodePort
