k8s-stage/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: news-demo-stage
  namespace: news-demo-stage
spec:
  rules:
    - host: news-demo-stage.apps.shivam.devcluster.openshift.com
      http:
        paths:
          - backend:
              service:
                name: news-demo-stage
                port:
                  number: 3000
            path: /
            pathType: Prefix
